chassis/tests/failing/comp_cyclic_dep2.stderr
error: Cyclic dependency for `Dummy1`
  --> $DIR/comp_cyclic_dep2.rs:13:38
   |
13 |         pub fn provide_dummy2(dummy: Dummy1) -> Dummy2 {
   |                                      ^^^^^^
   |
help: required for `Dummy2`
  --> $DIR/comp_cyclic_dep2.rs:17:38
   |
17 |         pub fn provide_dummy1(dummy: Dummy2) -> Dummy1 {
   |                                      ^^^^^^
help: required for `Dummy1`
  --> $DIR/comp_cyclic_dep2.rs:23:36
   |
23 |         fn resolve_dummy(&self) -> Dummy1;
   |                                    ^^^^^^
